src/css/app.scss
[un-cloak] {
  display: none;
}

img.emoji {
  height: 1em;
  width: 1em;
  margin: 0 0.05em 0 0.1em;
  vertical-align: -0.1em !important;
}

.body--dark .q-message-text {
  background-color: $nord1;
  color: $nord1;
}

.body--dark .q-message-text .q-btn {
  color: $nord8;
}

.body--light {
  color: $nord3;
}

.body--dark {
  color: $nord6;
}

a {
  color: $nord9;
  text-decoration: none;
}

a:hover {
  color: $nord10;
}

.body--light .q-header {
  color: $nord2;
  background-color: white;
}

.body--dark .q-header {
  color: $nord6;
  background-color: $nord0;
}

/* Fix for virtual cursor rendering issue in Electron on Windows */
.ProseMirror-focused .prosemirror-virtual-cursor-animation {
  will-change: opacity;
  transform: translateZ(0);
}

.q-chip--dark {
  background-color: $nord9;
}

.body--dark .shiki,
.body--dark .shiki span {
  color: var(--shiki-dark) !important;
  background-color: var(--shiki-dark-bg) !important;
  /* Optional, if you also want font styles */
  font-style: var(--shiki-dark-font-style) !important;
  font-weight: var(--shiki-dark-font-weight) !important;
  text-decoration: var(--shiki-dark-text-decoration) !important;
}

